tests/paczka1/fuzzy1/16172747.err
Error in line 3: egAJ S89 27,2
Error in line 9: egAJ S313 9,0
Error in line 12: egAJ S328 61,3
Error in line 2: tWsKL97eJs S831 51,5
Error in line 23: egAJ S313 54,7
Error in line 32: jtW S328 13,2
